# ikigai-linkeddata

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/ikigai-rdf/: Cargo.toml  README.md
crates/ikigai-rdf/src/: lib.rs
crates/ikigai-sniff/: Cargo.toml
crates/ikigai-sniff/src/: lib.rs
crates/ikigai-sparql/: Cargo.toml  README.md
crates/ikigai-sparql/src/: lib.rs
