[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Brian Sletten <brian.sletten@gmail.com>"]
repository = "https://github.com/ikigai-rs/ikigai-linkeddata"
homepage = "https://github.com/ikigai-rs/ikigai-linkeddata"

[workspace.dependencies]
ikigai-core = "0.1.22"
# The ikigai vocabulary (ns# ontology + Description→Turtle). ikigai-sparql bundles its
# schema graph so endpoint instances can be joined against the class/property defs.
ikigai-vocab = "0.1.22"
# Oxigraph's pure-Rust RDF crates — no rocksdb, so they compile to wasm32 (the
# browser transrepts/queries client-side). The full store is in-memory only.
oxrdf = "0.3"
oxrdfio = "0.2"
oxigraph = { version = "0.5", default-features = false }
