[package]
name = "ikigai-sniff"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Content-type sniffing for ikigai — urn:sniff classifies opaque (application/octet-stream) bytes into a concrete media type via pluggable heuristic detectors, the first step of octet-stream sniff-and-dispatch. Pure byte heuristics (no parsing); runs natively and in the browser (WASM)."
keywords = ["ikigai", "roc", "content-type", "sniff", "rdf"]
categories = ["web-programming", "parsing"]

[dependencies]
ikigai-core = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
futures = "0.3"
